# HexFlow

./: .gitignore  CMakeLists.txt
.github/workflows/: BuildPlatforms.yml
HexFlow/: CMakeLists.txt  FileSystem.c  FileSystem.h  Font.c  Font.h  Gizmos.c  Gizmos.h  Graph.c  Graph.h  List.c  List.h  Macros.h  Main.c  Matrix.c  Matrix.h  Memory.c  Memory.h  Operation.c  Operation.h  Projection.c  Projection.h  Shader.c  Shader.h  TextEditor.c  TextEditor.h  Vector.c  Vector.h
HexFlow/Container/: Vector.c  Vector.h
HexFlow/GLAD/: glad.c  glad.h
HexFlow/Math/: ClipSpace.c  ClipSpace.h  Math.h  MathTypes.h  Matrix.c  Matrix.h  Transform.c  Transform.h  Utility.h  Vector.c  Vector.h
HexFlow/NodeGraph/: Graph.c  Graph.h  Node.c  Node.h  NodeTypes.h
HexFlow/NodeGraph/Nodes/: RootNode.c  RootNode.h  TextEditorNode.c  TextEditorNode.h
PatchSection/: CMakeLists.txt  Main.c
Shaders/: FontFragmentShader.glsl  FontVertexShader.glsl  GizmosLineBatchVertexShader.glsl  GizmosLineFragmentShader.glsl  GizmosLineVertexShader.glsl  GizmosQuadBatchVertexShader.glsl  GizmosQuadFragmentShader.glsl  GizmosQuadVertexShader.glsl
