find_package (OpenGL REQUIRED)

file (GLOB_RECURSE TARGET_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

set (TARGET_NAME HexFlow)

add_executable (${TARGET_NAME}
	${TARGET_SOURCE}
)

set_target_properties (${TARGET_NAME} PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/$<CONFIG>
	LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/$<CONFIG>
	RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/$<CONFIG>
	C_STANDARD 99
)

target_compile_options (${TARGET_NAME} PRIVATE
	$<$<CONFIG:Debug>:
		$<$<C_COMPILER_ID:MSVC>:/MDd>
		$<$<C_COMPILER_ID:GNU>:-g>
		$<$<C_COMPILER_ID:Clang>:-g>
	>

	$<$<CONFIG:Release>:
		$<$<C_COMPILER_ID:MSVC>:/MD>
		$<$<C_COMPILER_ID:GNU>:-O3>
		$<$<C_COMPILER_ID:Clang>:-O3>
	>
)

target_compile_definitions (${TARGET_NAME} PRIVATE
	$<$<CONFIG:Debug>:HF_DEBUG>

	$<$<PLATFORM_ID:Windows>:
		HF_PLATFORM_WINDOWS
		_CRT_SECURE_NO_WARNINGS
	>
	$<$<PLATFORM_ID:Linux>:HF_PLATFORM_LINUX>
)

target_link_options (${TARGET_NAME} PRIVATE
	$<$<CONFIG:Debug>:
		$<$<C_COMPILER_ID:MSVC>:/IGNORE:4099>
	>
)

target_include_directories (${TARGET_NAME} PRIVATE
	${CMAKE_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/FreeType
)

target_link_libraries (${TARGET_NAME} PRIVATE
	${OPENGL_LIBRARIES}

	$<$<PLATFORM_ID:Windows>:
		${CMAKE_SOURCE_DIR}/Library/freetype.lib
		${CMAKE_SOURCE_DIR}/Library/glfw3.lib
	>

	$<$<PLATFORM_ID:Linux>:
		${CMAKE_SOURCE_DIR}/Library/freetype.a
		${CMAKE_SOURCE_DIR}/Library/glfw3.a
	>
)

add_custom_command (TARGET ${TARGET_NAME}
	POST_BUILD

	COMMAND ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe PatchFile ReadText ${CMAKE_SOURCE_DIR}/Shaders/GizmosLineVertexShader.glsl .glvs ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe
	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe

	COMMAND ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe PatchFile ReadText ${CMAKE_SOURCE_DIR}/Shaders/GizmosLineFragmentShader.glsl .glfs ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe
	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe

	COMMAND ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe PatchFile ReadText ${CMAKE_SOURCE_DIR}/Shaders/GizmosQuadVertexShader.glsl .gqvs ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe
	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe

	COMMAND ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe PatchFile ReadText ${CMAKE_SOURCE_DIR}/Shaders/GizmosQuadFragmentShader.glsl .gqfs ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe
	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe

	COMMAND ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe PatchFile ReadText ${CMAKE_SOURCE_DIR}/Shaders/GizmosLineBatchVertexShader.glsl .glbvs ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe
	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe

	COMMAND ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe PatchFile ReadText ${CMAKE_SOURCE_DIR}/Shaders/GizmosLineBatchFragmentShader.glsl .glbfs ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe
	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe

	COMMAND ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe PatchFile ReadText ${CMAKE_SOURCE_DIR}/Shaders/GizmosQuadBatchVertexShader.glsl .gqbvs ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe
	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe

	COMMAND ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe PatchFile ReadText ${CMAKE_SOURCE_DIR}/Shaders/GizmosQuadBatchFragmentShader.glsl .gqbfs ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe
	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe

	COMMAND ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe PatchFile ReadText ${CMAKE_SOURCE_DIR}/Shaders/FontVertexShader.glsl .fntvs ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe
	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe

	COMMAND ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe PatchFile ReadText ${CMAKE_SOURCE_DIR}/Shaders/FontFragmentShader.glsl .fntfs ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe
	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe

	COMMAND ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe PatchFile ReadBinary ${CMAKE_SOURCE_DIR}/Fonts/CascadiaMonoPL-Regular.otf .dfont ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe
	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe

	COMMAND ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe PatchDefaultUserConfig ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe
	COMMAND ${CMAKE_COMMAND} -E rename ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}Patched.exe ${CMAKE_SOURCE_DIR}/$<CONFIG>/${TARGET_NAME}.exe
)
